--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ heroimage: https://images.pexels.com/photos/220444/pexels-photo-220444.jpeg?auto
 # If you don't want to use any icon, you can leave them blank.
 email: thedevslot@gmail.com
 facebook_username: //jolene.branch.9
-twitter_username: @branch_jolene
+twitter_username: 
 instagram_username: jolene.branch
 linkedin_username: jolene-branch-931a171b2
 github_username:  jobranch2019
