--- a/_config.yml
+++ b/_config.yml
@@ -22,17 +22,13 @@ heroimage: https://images.pexels.com/photos/220444/pexels-photo-220444.jpeg?auto
 
 # Social Media and Contact
 # If you don't want to use any icon, you can leave them blank.
-email: thedevslot@gmail.com
+email: jobranch@my365.bellevue.edu
 facebook_username: //jolene.branch.9
-twitter_username: 
+twitter_username: @branch_jolene
 instagram_username: jolene.branch
 linkedin_username: jolene-branch-931a171b2
 github_username:  jobranch2019
 youtube_channel_id: UCk_93NXYP-U_AOB5GfWlOow
-reddit_username: /
-behance_username: /
-dribbble_username: /
-spotify_username: /
 
 # Google Analytics
 google-analytics: UA-163806439-1
