--- a/_config.yml
+++ b/_config.yml
@@ -27,18 +27,11 @@ facebook_username: //jolene.branch.9
 instagram_username: jolene.branch
 linkedin_username: jolene-branch-931a171b2
 github_username:  jobranch2019
-youtube_channel_id: UCk_93NXYP-U_AOB5GfWlOow
-
-# Google Analytics
-google-analytics: UA-163806439-1
-
-# Disqus
-disqus-shortname: thedevslot
 
 # Name of the Author
 author-name: Jolene Branch
 # URL for the Image of the Author
-author-image: https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png
+author-image: https://avatars.githubusercontent.com/u/51515313?v=4
 # 60 Words About the Author
 author-about: I have a Bachelor of Science in Nursing and a Master of Science in Data Science and work for the Department of Veterans Affairs 
 # URL to the Author's Profile (i.e., Github, Twitter, Stackoverflow, etc)
