--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ markdown: kramdown
 # URL of the Site
 url: ''
 # Base URL of the Site (i.e., Name of the Repository in which the Site is hosted)
-baseurl: https://github.com/jobranch2019
+baseurl: 
 
 # Title of the Site
 title: Jolene Branch
