--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,40 +5,40 @@
 - name: Breast Cancer Staging
   link: https://github.com/jobranch2019/Breast_Cancer_Staging
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/pink_ribbon.jpg
-  description: 
-  - name: Airline Safety
-  link:
+  description: Predictions of five-year survival of breast cancer
+- name: Airline Safety
+  link: https://github.com/jobranch2019/Airline_Safety
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/plane.jpg
-  - name: Nursing Home Compare
-  description: 
-  link:
+  description: A multi-modal data visualization and communication project
+- name: Nursing Home Comparisons
+  description: Predicting quality based on publicly available metrics
+  link: https://github.com/jobranch2019/Nursing_Home_Comparisons
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/nursing_home.jpg
-  description: 
-  - name: Movie Popularity
-  link:
+- name: Movie Popularity
+  link: https://github.com/jobranch2019/Movie_Popularity
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/movie.jpg
+  description: Explores relationships among movie popularity, body count, and Oscars
+- name: Python Weather API
+  link: https://github.com/jobranch2019/Python_Weather_API
+  image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/weather.jpg
+  description: Interacting with a webservice in order to obtain data
+- name: Predicting Hospital Readmissions
+  link: https://github.com/jobranch2019/Predicting-Hospital-Readmission
+  image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/beds.jpg
+  description: Predicting hospital readmissions in order to prevent them
+- name: Clinical Use for Dementia Pets
+  link: https://github.com/jobranch2019/Clinical_Uses_For_Dementia_Pets
+  image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/cat.jpg
+  description: Exploration of therapy augmented by fitness tracker data
+- name: COVID-19
+  link:
+  image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/COVID_white.jpg
   description: 
-  - name: 
+- name: Project 2 - TBD
   link:
   image: 
   description: 
-  - name: 
-  link:
-  image: 
-  description: 
-  - name: 
-  link:
-  image: 
-  description: 
-  - name: 
-  link:
-  image: 
-  description: 
-  - name: 
-  link:
-  image: 
-  description: 
-  - name: 
+- name: Project 3 - TBD
   link:
   image: 
   description: 
