--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -10,7 +10,7 @@
   link: https://github.com/jobranch2019/Airline_Safety
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/plane.jpg
   description: A multi-modal data visualization and communication project
-- name: Comparing Nursing Homes
+- name: Nursing Home Compare
   description: Predicting quality based on publicly available metrics
   link: https://github.com/jobranch2019/Nursing_Home_Comparisons
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/nursing_home.jpg
@@ -22,11 +22,11 @@
   link: https://github.com/jobranch2019/Python_Weather_API
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/weather.jpg
   description: Interacting with a webservice in order to obtain data
-- name: Predicting Hospital Readmissions
+- name: Hospital Readmissions
   link: https://github.com/jobranch2019/Predicting-Hospital-Readmission
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/beds.jpg
   description: Predicting hospital readmissions in order to prevent them
-- name: Clinical Use for Dementia Pets
+- name: Dementia Pets' Utilties
   link: https://github.com/jobranch2019/Clinical_Uses_For_Dementia_Pets
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/cat.jpg
   description: Exploration of therapy augmented by fitness tracker data
