--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -26,7 +26,7 @@
   link: https://github.com/jobranch2019/Predicting-Hospital-Readmission
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/beds.jpg
   description: Predicting hospital readmissions in order to prevent them
-- name: Dementia Pets' Utilties
+- name: Dementia Pets' Utilities
   link: https://github.com/jobranch2019/Clinical_Uses_For_Dementia_Pets
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/cat.jpg
   description: Exploration of therapy augmented by fitness tracker data
