--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ baseurl:
 # Title of the Site
 title: Jolene Branch
 # Description of the Site
-description: Portfolio of Projects
+description: (in progress) Portfolio of Projects
 # URL of Image of the Site
 site-image: /WhatATheme/assets/images/meta.jpg
 # Keywords of the Site
@@ -18,7 +18,7 @@ site-keywords: Site, Template, Theme
 favicon-url: 
 
 # URL of the Image of Custom Hero Image (i.e., the image in the background of the very first section of the Homepage)
-heroimage: https://images.pexels.com/photos/220444/pexels-photo-220444.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940
+heroimage: https://unsplash.com/photos/xh_l2eGV4B4
 
 # Social Media and Contact
 # If you don't want to use any icon, you can leave them blank.
