--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ site-keywords: Site, Template, Theme
 favicon-url: 
 
 # URL of the Image of Custom Hero Image (i.e., the image in the background of the very first section of the Homepage)
-heroimage: https://unsplash.com/photos/xh_l2eGV4B4
+heroimage: https://images.unsplash.com/photo-1549119246-cf57ef8a17b2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8ODZ8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60
 
 # Social Media and Contact
 # If you don't want to use any icon, you can leave them blank.
