--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,8 @@ github_username:  jobranch2019
 # Name of the Author
 author-name: Jolene Branch
 # URL for the Image of the Author
-# author-image: https://avatars.githubusercontent.com/u/51515313?v=4  (not supposed to include picture with resume with government jobs)
+# (not supposed to include picture with resume with government jobs)
+author-image: https://avatars.githubusercontent.com/u/51515313?v=4  
 # 60 Words About the Author
 author-about: I have a Bachelor of Science in Nursing and a Master of Science in Data Science and work for the Department of Veterans Affairs 
 # URL to the Author's Profile (i.e., Github, Twitter, Stackoverflow, etc)
