--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ author-name: Jolene Branch
 # (not supposed to include picture with resume with government jobs)
 author-image: https://avatars.githubusercontent.com/u/51515313?v=4  
 # 60 Words About the Author
-author-about: I have a BS in Nursing from Viterbo University and a MS in Data Science from Bellevue University.  I have worked for the Department of Veterans Affairs at the local level for 17 years and wish to work at the national level.
+author-about: I have a BS in Nursing from Viterbo University and a MS in Data Science from Bellevue University.  I have worked for the Department of Veterans Affairs at the local level for 17 years, and if I clear the background check, will soon be working at the national level.
 # URL to the Author's Profile (i.e., Github, Twitter, Stackoverflow, etc)
 author-url: https://github.com/jobranch2019
 
