--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -29,7 +29,7 @@
   description: Predicting hospital readmissions in order to prevent them
 - name: Dementia Pets' Utilities
   link: https://github.com/jobranch2019/Clinical_Uses_For_Dementia_Pets
-  image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/cat.jpg
+  image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/cat.jpg?raw=true
   description: Exploration of therapy augmented by fitness tracker data
 - name: COVID-19 - in progress
   link:
