--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -16,7 +16,7 @@
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/nursing_home.jpg
 - name: Movie Popularity
   link: https://github.com/jobranch2019/Movie_Popularity
-  image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/movie.jpg
+  image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/movie.jpg?raw=true
   description: Explores relationships among movie popularity, body count, and Oscars
 - name: Python Weather API
   link: https://github.com/jobranch2019/Python_Weather_API
