--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -40,5 +40,5 @@
   description: 
 - name: Project 3 - TBD
   link:
-  image: 
+  image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/three_masks.jpg?raw=true
   description: 
