--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,5 +1,5 @@
 - name: ER Timeliness
-  image: https://unsplash.com/photos/Ei46GUcG_y4.jpg
+  image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/ER.jpg?raw=true
   link: https://github.com/jobranch2019/ER_Timeliness
   description: ER selection guidance based on patient volume
 - name: Breast Cancer Staging
