--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -32,7 +32,7 @@
   description: Exploration of therapy augmented by fitness tracker data
 - name: COVID-19 - in progress
   link:
-  image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/COVID_white.jpg
+  image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/COVID_white.jpg?raw=true
   description: Incredibly insightful comment that takes up exactly 2 lines goes here
 - name: Project 2 - TBD
   link:
