--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ author-name: Jolene Branch
 # (not supposed to include picture with resume with government jobs)
 author-image: https://avatars.githubusercontent.com/u/51515313?v=4  
 # 60 Words About the Author
-author-about: I have a BS in Nursing from Viterbo University and a MS in Data Science from Bellevue University.  I worked as a staff nurse at the Mayo Clinic for the first nine years of my career and have been with the Department of Veterans Affairs since then. And yes, I have seen the Northern Lights from my home!
+author-about: I have a BS in Nursing from Viterbo University and a MS in Data Science from Bellevue University.  I worked as a staff nurse at the Mayo Clinic for the first nine years of my career and have been with the Department of Veterans Affairs since then. And yes, I have watched the Northern Lights dance from my home!
 # URL to the Author's Profile (i.e., Github, Twitter, Stackoverflow, etc)
 author-url: https://github.com/jobranch2019
 
