--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -33,7 +33,7 @@
 - name: COVID-19 - in progress
   link:
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/COVID_white.jpg?raw=true
-  description: Incredibly insightful comment that takes up exactly 2 lines goes here
+  description: Going straight to the data to avoid media information bias
 - name: Project 2 - TBD
   link:
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/masks.jpg
