--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -35,7 +35,7 @@
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/COVID_white.jpg?raw=true
   description: Going straight to the data to avoid media information bias
 - name: Project 2 - TBD
-  link:
+  link: https://github.com/jobranch2019/COVID_19_Data_Storytelling
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/masks.jpg
   description: 
 - name: Project 3 - TBD
