--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -30,8 +30,8 @@
   link: https://github.com/jobranch2019/Clinical_Uses_For_Dementia_Pets
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/cat.jpg?raw=true
   description: Exploration of therapy augmented by fitness tracker data
-- name: COVID-19 - in progress
-  link:
+- name: COVID-19 Storytelling
+  link: https://github.com/jobranch2019/COVID_19_Data_Storytelling
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/COVID_white.jpg?raw=true
   description: Going straight to the data to avoid media information bias
 - name: Project 2 - TBD
