--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,5 +1,6 @@
 - name: ER Timeliness
-  image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/ER.jpg?raw=true
+  # image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/ER.jpg?raw=true
+  image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/ER_sign.jpg?raw=true
   link: https://github.com/jobranch2019/ER_Timeliness
   description: ER selection guidance based on patient volume
 - name: Breast Cancer Staging
