--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@ site-keywords: Site, Template, Theme
 favicon-url: 
 
 # URL of the Image of Custom Hero Image (i.e., the image in the background of the very first section of the Homepage)
-heroimage: https://images.unsplash.com/photo-1498144846853-60ca2d43853b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTEwfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60
+heroimage: https://images.unsplash.com/photo-1540915420822-f62f9fdf04e0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mjg0fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60
+#heroimage: https://images.unsplash.com/photo-1498144846853-60ca2d43853b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTEwfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60
 # heroimage: https://images.unsplash.com/photo-1623283596941-754adbf65a2c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MjU1fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60
 # heroimage: https://images.unsplash.com/photo-1551272744-dc08dd02f2c5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTg5fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60
 
