--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ baseurl:
 # Title of the Site
 title: Jolene Branch
 # Description of the Site
-description: (in progress) Portfolio of Projects
+description: Data Science Portfolio
 # URL of Image of the Site
 site-image: /WhatATheme/assets/images/meta.jpg
 # Keywords of the Site
