--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: ''
 baseurl: 
 
 # Title of the Site
-title: Jolene Branch
+title: Jolene M. Branch
 # Description of the Site
 description: Data Science Portfolio
 # URL of Image of the Site
