--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -41,10 +41,11 @@
   # image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/COVID_white.jpg?raw=true
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/black_COVID.jpg?raw=true
   description: Going straight to the data to avoid media information bias
-- name: Project 2 - TBD
-  link: 
-  image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/masks.jpg?raw=true
-  description: 
+- name: (in progress) "Where did the money go?"
+  link:
+  image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/Amazon.jpg?raw=true
+  #image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/masks.jpg?raw=true
+  description: Gaining insights to make predictions from Amazon personal spending reports
 - name: Project 3 - TBD
   link:
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/three_masks.jpg?raw=true
