--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -41,7 +41,7 @@
   # image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/COVID_white.jpg?raw=true
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/black_COVID.jpg?raw=true
   description: Going straight to the data to avoid media information bias
-- name: (in progress) "Where did the money go?"
+- name: (in progress) "Follow the money!"
   link:
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/Amazon.jpg?raw=true
   #image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/masks.jpg?raw=true
