--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -41,8 +41,8 @@
   # image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/COVID_white.jpg?raw=true
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/black_COVID.jpg?raw=true
   description: Going straight to the data to avoid media information bias
-- name: (in progress) "Follow the money!"
-  link:
+- name: On-Line Spending Behavior
+  link: https://github.com/jobranch2019/Amazon_purchases
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/SALE%20sign.jpg?raw=true
   #image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/Amazon.jpg?raw=true
   #image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/masks.jpg?raw=true
