--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -50,4 +50,4 @@
 - name: Project 3 - TBD
   link:
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/three_masks.jpg?raw=true
-  description: 
+  description: Stay tuned for some super awesome project!
