--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -47,7 +47,7 @@
   #image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/Amazon.jpg?raw=true
   #image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/masks.jpg?raw=true
   description: Gaining insights to make predictions from Amazon personal spending reports
-- name: Project 3 - TBD
-  link:
+- name: Image Classification
+  link: https://github.com/jobranch2019/Image_Classification
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/three_masks.jpg?raw=true
-  description: Stay tuned for some super awesome project!
+  description: Uses deep learning to train a convnet to detect face mask wearers
