--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -50,4 +50,4 @@
 - name: Face Mask Screening
   link: https://github.com/jobranch2019/Image_Classification
   image: https://github.com/jobranch2019/jobranch2019.github.io/blob/master/assets/images/three_masks.jpg?raw=true
-  description: (in progress) Uses deep learning image classification to detect compliance
+  description: Deep learning image classification can overcome human vulnerabilities
